--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>S1 Teknik Informatika</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>maulanaakbarr101@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>maulanaakbar07.github.io</span></li>
                 </ul>
               </div>
             </div>
